chore(package): rename repo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lazy-type",
+  "name": "typeg",
   "version": "0.0.0",
   "main": "index.js",
   "author": "Suguru Motegi <suguru.motegi@gmail.com>",
