feat(bin): add bin file

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Suguru Motegi <suguru.motegi@gmail.com>",
   "license": "MIT",
   "private": true,
+  "bin": "./bin/typeg.js",
   "scripts": {
     "precommit": "lint-staged"
   },
