--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
+    "lib": ["es6", "es2017"],
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmit": true,
+    "outDir": "dist",
+    "sourceMap": true,
     "noImplicitReturns": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
