--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "example"]
 }
