--- a/package.json
+++ b/package.json
@@ -5,15 +5,6 @@
   "author": "Suguru Motegi <suguru.motegi@gmail.com>",
   "license": "MIT",
   "bin": "./bin/typeg.js",
-  "scripts": {
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
   "files": [
     "README.md",
     "bin",
@@ -35,6 +26,17 @@
   },
   "peerDependencies": {
     "prettier": ">= 1.13.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "prettier": {
     "printWidth": 100,
