--- a/package.json
+++ b/package.json
@@ -3,26 +3,31 @@
   "version": "0.1.3",
   "main": "index.js",
   "author": "Suguru Motegi <suguru.motegi@gmail.com>",
+  "private": true,
   "license": "MIT",
   "bin": "./bin/typeg.js",
+  "scripts": {
+    "build": "tsp build"
+  },
   "files": [
     "README.md",
     "bin",
-    "dist"
+    "lib"
   ],
   "devDependencies": {
-    "@types/node": "^10.12.15",
+    "@types/node": "^11.11.5",
     "husky": "^1.1.4",
     "lint-staged": "^8.0.4",
     "prettier": "^1.15.2",
     "ts-node": "^7.0.1",
+    "ts-publisher": "^0.1.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "typescript": "~3.7.5"
   },
   "dependencies": {
-    "dcp": "^0.1.4",
+    "dcp": "^0.2.0",
     "minimist": "^1.2.0",
-    "prettier-hook": "^0.3.2"
+    "prettier-hook": "^0.4.6"
   },
   "peerDependencies": {
     "prettier": ">= 1.13.7"
@@ -39,7 +44,7 @@
     ]
   },
   "prettier": {
-    "printWidth": 100,
+    "printWidth": 120,
     "singleQuote": true,
     "trailingComma": "all"
   }
